tooltiptext overflow hidden fix

--- a/staticmain/styles.css
+++ b/staticmain/styles.css
@@ -244,7 +244,7 @@ h6.logout {
 
     .title-description {
         display: none;
-    }§
+    }
 }
 
 @media (min-width: 1214px) {
@@ -308,12 +308,6 @@ h6.logout {
 
 .table-wrapper {
     margin-top: 50px;
-    /*box-shadow: 0 -15px 15px -15px #333;*/
-    overflow: auto;
-    overflow-y: hidden;
-    /*border-top: 10px solid #73AD21;*/
-
-
 }
 
 @media (min-width: 786px) {
@@ -328,7 +322,7 @@ h6.logout {
 
 table {
     overflow-x: scroll;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
     display: table;
 }
 
@@ -483,7 +477,6 @@ img.product-thumb:hover {
 }
 
 /*RESULTLIST*/
-
 
 .resultlist li {
     list-style-type: none;
@@ -747,21 +740,17 @@ span.price-staffel {
     max-width: 200px;
     background-color: #73AD21;
     color: #fff;
-    /*text-align: center;*/
     padding: 5px;
     border-radius: 6px 6px 6px 6px;
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     bottom: 0px;
     left: 50%;
     transform: translate(-50%, 100%);
-    font-family: Arvo, Charcoal, sans-serif;
+    /*font-family: Arvo, Charcoal, sans-serif;*/
     font-size: 12px;
     line-height: 15px;
     box-shadow: 0 2px 6px 0 rgba(32, 33, 36, 0.28);
-
-    /*text-align: justify;*/
-    /*text-align-last: justify;*/
 }
 
 .tooltiptext::after {
@@ -1267,6 +1256,8 @@ html, body {
 
 .footer-spacer {
     height: 200px;
+    position: relative;
+    z-index: -1;
 }
 
 .footer-all-boxes {
